--- a/tests/testdata/index.html
+++ b/tests/testdata/index.html
@@ -1,10 +1,10 @@
 <html>
 
-{{components/head.html}}
+{{T components/head.html T}}
 
 <body>
-    {{components/navbar.html}}
-    {{components/main.html}}
+    {{T components/navbar.html T}}
+    {{T components/main.html T}}
 </body>
 
 </html>
